nginx-wordpress-mysql/12-mysql-services.yaml
# Headless service for stable DNS entries of StatefulSet members.
apiVersion: v1
kind: Service
metadata:
  name: mysql
  labels:
    app: wordpress
    tier: mysql
spec:
  ports:
  - name: mysql
    port: 3306
  clusterIP: None
  selector:
    app: wordpress
    tier: mysql
---
# Client service for connecting to any MySQL instance for reads.
# For writes, you must instead connect to the master: mysql-0.mysql.
apiVersion: v1
kind: Service
metadata:
  name: mysql-read
  labels:
    app: wordpress
    tier: mysql
spec:
  ports:
  - name: mysql
    port: 3306
  selector:
    app: wordpress
    tier: mysql
