nginx-wordpress-mysql/32-ingress-tls.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: nginx-test
spec:
  tls:
    - hosts:
      - example.com
      # This assumes tls-secret exists and the SSL
      # certificate contains a CN for example.com
      secretName: example-tls
  rules:
    - host: example.com
      http:
        paths:
        - path: /
          backend:
            serviceName: wordpress
            servicePort: 80
