nginx-wordpress-mysql/36-ingress-tls.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: nginx-test
spec:
  tls:
    - hosts:
      - example.com
      # This assumes tls-secret exists and the SSL
      # certificate contains a CN for foo.suse.example.com
      secretName: tls-secret
  rules:
    - host: foo.suse.example.com
      http:
        paths:
        - path: /
          backend:
            # This assumes http-svc exists and routes to healthy endpoints
            serviceName: wordpress
            servicePort: 80
